added all statistic functions into a separate .js file, linked it, and cleaned up the appearance of multi-table pages

--- a/house_loyalty.html
+++ b/house_loyalty.html
@@ -68,10 +68,10 @@
                 </div>
             </div>
         </div>
-        <h3 class="border bg-dark p-2" style="text-align: center">
-            <a class="text-light" data-toggle="collapse" href="#glance"> &#10509; Click &#10508; to See the House of Representatives at a Glance </a>
-        </h3>
-        <div class="panel-collapse collapse in" id="glance">
+        <h4 class="border bg-dark p-2" style="text-align: center">
+            <a class="text-light"> The House of Representatives at a Glance </a>
+        </h4>
+        <div>
             <table class="table table-hover">
                 <thead class="thead-dark">
                     <tr class="border">
@@ -86,15 +86,10 @@
             </table>
         </div>
 
-<!--  <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>  -->
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapseTop"> ... Most Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Overall </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapseTop">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -112,9 +107,9 @@
             </table>
         </div>
 
-        <h3 class="border p-2 bg-dark" style="text-align: center" href="#collapse1">
+        <h4 class="border p-2 bg-dark" style="text-align: center" href="#collapse1">
             <a class="text-light" data-toggle="collapse" href="#collapse1"> ... Most Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Dem. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse1">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -132,9 +127,9 @@
             </table>
         </div>
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse2">  ... Most Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Rep. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse2">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -151,9 +146,9 @@
             </table>
         </div>
 
-        <h3 class="border bg-dark p-2" style="text-align: center">
+        <h4 class="border bg-dark p-2" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse3">  ... Most Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Indep.</a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse3">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -170,9 +165,9 @@
             </table>
         </div>
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse4">  ... Least Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Overall.</a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse4">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -192,9 +187,9 @@
         </div>
 
         
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse6">  ... Least Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Dem.</a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse6">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -213,9 +208,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse7"> ... Least Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Rep. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse7">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -233,9 +228,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse8"> ... Least Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Indep. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse8">
             <table class="table table-hover">
                 <thead class="thead-dark">
