--- a/senate_attendance.html
+++ b/senate_attendance.html
@@ -29,7 +29,7 @@
                                 113th Congress
                             </a>
                             <div class="dropdown-menu px-5" aria-labelledby="members">
-                                <a class="dropdown-item" href="senate.html">Senate</a>
+                                <a class="dropdown-item d-flex justify-content-center" href="senate.html">Senate</a>
                                 <a class="dropdown-item" href="house.html">House</a>
                             </div>
                         </div>
@@ -69,10 +69,10 @@
                 </div>
             </div>
         </div>
-        <h3 class="border bg-dark p-2" style="text-align: center">
-            <a class="text-light" data-toggle="collapse" href="#glance"> &#10509; Click &#10508; to See the Senate at a Glance </a>
-        </h3>
-        <div class="panel-collapse collapse in" id="glance">
+        <h4 class="border bg-dark p-2" style="text-align: center">
+            <a class="text-light"> The Senate at a Glance </a>
+        </h4>
+        <div>
             <table class="table table-hover">
                 <thead class="thead-dark">
                     <tr class="border">
@@ -88,9 +88,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapseTop"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Overall </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapseTop">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -109,9 +109,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center" href="#collapse1">
+        <h4 class="border p-2 bg-dark" style="text-align: center" href="#collapse1">
             <a class="text-light" data-toggle="collapse" href="#collapse1"> ... The Most Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse1">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -130,9 +130,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse2"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse2">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -150,9 +150,9 @@
         </div>
 
 
-        <h3 class="border bg-dark p-2" style="text-align: center">
+        <h4 class="border bg-dark p-2" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse3"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse3">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -170,9 +170,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse4"> ...The Least Engaged &#40;Bottom 10% Attendance Rate&#41; - Overall </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse4">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -192,9 +192,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse6"> ... The Least Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse6">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -213,9 +213,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse7"> ... The Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse7">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -233,9 +233,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse8"> ... The Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse8">
             <table class="table table-hover">
                 <thead class="thead-dark">
