--- a/house_attendance.html
+++ b/house_attendance.html
@@ -67,10 +67,10 @@
                 </div>
             </div>
         </div>
-        <h3 class="border p-2 bg-dark" style="text-align: center">
-            <a class="text-light" data-toggle="collapse" href="#glance"> &#10509; Click &#10508; to See the House at a Glance </a>
-        </h3>
-        <div class="panel-collapse collapse in" id="glance">
+        <h2 class="border p-2 bg-dark" style="text-align: center">
+            <a class="text-light"> The House at a Glance </a>
+        </h2>
+        <div>
             <table class="table table-hover">
                 <thead class="thead-dark">
                     <tr class="border">
@@ -86,9 +86,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapseTop"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Overall </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapseTop">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -107,9 +107,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center" href="#collapse1">
+        <h4 class="border p-2 bg-dark" style="text-align: center" href="#collapse1">
             <a class="text-light" data-toggle="collapse" href="#collapse1"> ... The Most Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse1">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -128,9 +128,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse2"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse2">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -148,9 +148,9 @@
         </div>
 
 
-        <h3 class="border bg-dark p-2" style="text-align: center">
+        <h4 class="border bg-dark p-2" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse3"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse3">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -168,9 +168,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse4"> ...The Least Engaged &#40;Bottom 10% Attendance Rate&#41; - Overall </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse4">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -190,9 +190,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse6"> ... The Least Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse6">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -211,9 +211,9 @@
         </div>
 
 
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse7"> ... The Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse7">
             <table class="table table-hover">
                 <thead class="thead-dark">
@@ -231,9 +231,9 @@
         </div>
 
         
-        <h3 class="border p-2 bg-dark" style="text-align: center">
+        <h4 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse8"> ... The Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
-        </h3>
+        </h4>
         <div class="panel-collapse collapse" id="collapse8">
             <table class="table table-hover">
                 <thead class="thead-dark">
