--- a/senate_attendance.html
+++ b/senate_attendance.html
@@ -29,7 +29,7 @@
                                 113th Congress
                             </a>
                             <div class="dropdown-menu px-5" aria-labelledby="members">
-                                <a class="dropdown-item d-flex justify-content-center" href="senate.html">Senate</a>
+                                <a class="dropdown-item" href="senate.html">Senate</a>
                                 <a class="dropdown-item" href="house.html">House</a>
                             </div>
                         </div>
@@ -263,6 +263,7 @@
     <script src="/main.js"> </script>
     <script src="/statistics.js"> </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script>
