--- a/house.html
+++ b/house.html
@@ -73,7 +73,12 @@
                 <label> Independent <input class="party" type="checkbox" onchange="memberTable(allMembers)" id="partyCheck" value="I"> </input> </label>
                 <label> Republican <input class="party" type="checkbox" onchange="memberTable(allMembers)" id="partyCheck" value="R"> </input> </label>
             </form>
-            <select id="state" onchange="memberTable(allMembers)" name="states"></select>
+            <div class="d-flex justify-content-end" style="width: 50%">
+                <div class="justify-content-around">
+                    <label> State: </label>
+                    <select id="state" onchange="memberTable(allMembers)" name="states"></select>
+                </div>
+            </div>
         </div>
         <div class=col style="height: 15px"> </div>
         <table class="table table-hover">
@@ -106,9 +111,11 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script>
             stateDrop()
+
         </script>
         <script>
             memberTable(allMembers)
+
         </script>
 </body>
 
